fix(perf): improve performance when loading lots of users